@@ -378,7 +378,7 @@ table.insert(tests, "checkout_validates_target_directory")
 table.insert(tests, "checkout_creates_right__MTN_options")
 table.insert(tests, "trust_hooks_and_trusted_command")
 table.insert(tests, "attr_set_attr_get")
-table.insert(tests, "--rcfile_requires_extant_file")
+table.insert(tests, "_--rcfile_requires_extant_file")
 table.insert(tests, "persistent_netsync_server_-_revs_&_certs")
 table.insert(tests, "persistent_netsync_server_-_keys")
 table.insert(tests, "first_extent_normalization_pass")
@@ -400,7 +400,7 @@ table.insert(tests, "status_with_missing_files")
 table.insert(tests, "(imp)_persistent_netsync_server_-_keys_2")
 table.insert(tests, "update_1")
 table.insert(tests, "(todo)_vcheck")
-table.insert(tests, "--db_with_parent_dir")
+table.insert(tests, "_--db_with_parent_dir")
 table.insert(tests, "add_in_subdir")
 table.insert(tests, "(minor)_drop_in_subdir")
 table.insert(tests, "revert_in_subdirs")
@@ -493,7 +493,7 @@ table.insert(tests, "cvs_import_with_file_added_on_a_branch")
 table.insert(tests, "use_get_linesep_conv_hook")
 table.insert(tests, "add_workspace_commit_in_another")
 table.insert(tests, "update_to_non-existent_rev")
-table.insert(tests, "--author,_--date")
+table.insert(tests, "_--author,_--date")
 table.insert(tests, "update_does_not_stomp_non-monotone_files")
 table.insert(tests, "db_check_and_non-serious_errors")
 table.insert(tests, "db_kill_rev_locally_command")
@@ -526,7 +526,7 @@ table.insert(tests, "netsync_badhost_gives_nice_error")
 table.insert(tests, "checking_a_few_command_specific_options")
 table.insert(tests, "annotate_where_one_parent_is_full_copy")
 table.insert(tests, "cvs_import,_deleted_file_invariant")
-table.insert(tests, "--rcfile=-")
+table.insert(tests, "_--rcfile=-")
 table.insert(tests, "mtn_up")
 table.insert(tests, "merge((drop_a),_(rename_a_b,_patch_b))")
 table.insert(tests, "fail_cleanly_on_unreadable__MTN_options")
@@ -551,7 +551,7 @@ table.insert(tests, "merge_manual_file")
 table.insert(tests, "revert_works_with_restrictions")
 table.insert(tests, "status")
 table.insert(tests, "a_tricky_cvs_repository_with_tags")
-table.insert(tests, "--rcfile=directory")
+table.insert(tests, "_--rcfile=directory")
 table.insert(tests, "include()_and_includedir()_lua_functions")
 table.insert(tests, "lua_function_existsonpath")
 table.insert(tests, "db_kill_branch_certs_locally_command")
@@ -594,7 +594,7 @@ table.insert(tests, "diffing_a_file_within_revision_outside_a_workspace")
 table.insert(tests, "logging_a_file_within_revision_outside_a_workspace")
 table.insert(tests, "add_inside__MTN_")
 table.insert(tests, "annotate_file_whose_name_changed")
-table.insert(tests, "--confdir_option_and_get_confdir_lua_function_work")
+table.insert(tests, "_--confdir_option_and_get_confdir_lua_function_work")
 table.insert(tests, "database_is_closed_on_signal_exit")
 table.insert(tests, "update_-b_switches_branches_even_when_noop")
 table.insert(tests, "migrate_with_rosterify")
